[package]
name = "relon-evaluator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The evaluation engine for the Relon language"
keywords = ["evaluator", "interpreter", "sandboxed", "dsl", "config"]
categories = ["compilers", "config"]

[features]
# Phase G.W11 Phase 2 cold-start: `remote-http` gates the
# `RemoteHttpResolver` module along with its `ureq` (sync HTTPS GET +
# rustls + ring) dependency tree. Default-off keeps the W11
# trivial-`#main` cold-start binary lean — the resolver is only
# constructed on the `--trust` path with a `https://` `#import`, which
# the W11 shape never exercises. Hosts that need remote `#import`
# (CI tools that pull from a registry, the `relon-cli` invocation
# with `--trust` + remote URL) opt in via `--features remote-http`.
# When the feature is off, the `RemoteHttpResolver` symbol stops
# existing; downstream code that referenced it should also gate on
# `cfg(feature = "remote-http")` via the facade re-export.
default = []
remote-http = ["dep:ureq"]

[dependencies]
relon-parser = { workspace = true }
relon-analyzer = { workspace = true }
relon-eval-api = { workspace = true }
# v3++ b-4: pulled in so the tree-walk `title()` body shares the
# same Unicode combining-mark detection table as the wasm-AOT body.
# Keeping the table in one place avoids the two backends drifting
# apart on grapheme-cluster semantics.
relon-ir = { workspace = true }
ordered-float.workspace = true
# `rc` enables `serde::Serialize`/`Deserialize` for `Arc<T>` so that
# `Value::List(Arc<Vec<Value>>)` and `Value::Dict(Arc<ValueDict>)` can
# auto-derive the trait. Removing it requires hand-rolled impls — keep
# the feature on as long as Value carries Arc'd payloads.
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["derive"] }
# v3++ b-2 fix (review-improvement-174): runtime `#import "..." sha256:"..."`
# integrity verification must apply on every target (including the wasm32
# playground); otherwise an attacker could bypass pinning simply by running
# the script in the browser. So sha2/hex are promoted from the previous
# `cfg(not(wasm32))` block to the top-level [dependencies] table; `ureq`
# stays target-gated since it still needs native sockets / TLS.
sha2 = { workspace = true }
hex = { workspace = true }
# Stdlib JSON Schema parity wave: regex for `matches` + format
# predicates (`is_email` / `is_uri` / `is_ipv4` / etc.).
regex = { workspace = true }

# v3+ a-3: HTTPS fetch for remote `#import "https://..."` modules.
# Restricted to native hosts so the browser playground build of
# `relon-wasm` (which depends on this crate) keeps compiling against
# `wasm32-unknown-unknown` without dragging in native sockets / TLS.
# Phase G.W11 Phase 2 cold-start: also gated behind the `remote-http`
# cargo feature so the W11 trivial-`#main` CLI build (which does not
# need https) can drop ureq + rustls + ring (~700 KB text).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
# `relon-fmt` is pulled in only for the fmt round-trip property in
# `tests/property_tests.rs` (the formatter ↔ evaluator equivalence
# guarantee: formatting source preserves its evaluated value).
#
# Audit (2026-05-21, review-improvement-138): no `relon_fmt::` use
# in `src/`; the runtime crate stays formatter-free and the published
# `[dependencies]` graph carries no edge to `relon-fmt`. `relon-fmt`'s
# own dependency closure (parser only) does not loop back through
# `relon-evaluator`, so this dev-dep is acyclic and safe to keep.
relon-fmt = { workspace = true }
