[package]
name = "relon-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formatter and syntax checker for Relon files"

[dependencies]
clap = { workspace = true, features = ["derive"] }
relon-parser = { path = "../relon-parser" }
thiserror = { workspace = true }
