[package]
name = "relon-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Linear-typed IR layer between Relon analyzer and codegen backends (WASM, native, JS, ...)"
keywords = ["relon", "ir", "compiler", "lowering"]
categories = ["compilers"]

[dependencies]
# Source positions for IR ops + diagnostics
relon-parser = { workspace = true }
# AnalyzedTree input
relon-analyzer = { workspace = true }
# Schema canonical form, layout, and SchemaDef -> Schema lowering used
# by Phase 2.b to package `#main` params into a 1-record schema and
# resolve field offsets for `Op::LoadField` / `Op::StoreField`.
relon-eval-api = { workspace = true }
# Canonical FxHash (`fx_hash_bytes`) for `Op::DictGetByStringKey::shape_hash`
# producers. Centralised in `relon-trace-abi` so analyzer / IR side and
# trace-jit runtime side stamp/dispatch with identical hashes — drift
# would silently turn every IC lookup into a miss.
relon-trace-abi = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true }
# Float wrapper that derives `Eq` / `Hash` / `PartialEq` so the IR's
# `Op::ConstF64` can participate in derived comparisons — matches the
# parser's `Expr::Float` representation so lowering stays a 1:1 copy.
ordered-float = { workspace = true }
