[package]
name = "relon-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Linear-typed IR layer between Relon analyzer and codegen backends (WASM, native, JS, ...)"
keywords = ["relon", "ir", "compiler", "lowering"]
categories = ["compilers"]

[dependencies]
# Source positions for IR ops + diagnostics
relon-parser = { workspace = true }
# AnalyzedTree input
relon-analyzer = { workspace = true }
# Schema canonical form, layout, and SchemaDef -> Schema lowering used
# by Phase 2.b to package `#main` params into a 1-record schema and
# resolve field offsets for `Op::LoadField` / `Op::StoreField`.
relon-eval-api = { workspace = true }
# Leaf crate holding the Unicode tables / algorithms and the glob
# matcher that used to live under `relon-ir/src/unicode/` +
# `relon-ir/src/glob.rs`. Re-exported at the crate root so the codegen
# backends keep using `relon_ir::ascii_fold_simd` / `relon_ir::glob` /
# etc. unchanged.
relon-unicode = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true }
# Structured diagnostics facade. Used to surface the "host registered a
# native signature but never declared its capability gate" fail-open as
# an opt-in-visibility `warn!` (inert unless the host installs a
# subscriber) — matching the `tracing` usage already in the cranelift
# backend and the top-level `relon` crate.
tracing = "0.1"
# Float wrapper that derives `Eq` / `Hash` / `PartialEq` so the IR's
# `Op::ConstF64` can participate in derived comparisons — matches the
# parser's `Expr::Float` representation so lowering stays a 1:1 copy.
ordered-float = { workspace = true }
