[package]
name = "relon-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Relon (parse + analyze + diagnostics)"

[[bin]]
name = "relon-lsp"
path = "src/main.rs"

[dependencies]
relon-parser = { path = "../relon-parser" }
relon-analyzer = { path = "../relon-analyzer" }
lsp-server = "0.7"
lsp-types = "0.95"
miette = "7.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
