[package]
name = "relon-object-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "On-disk + in-memory cache for cranelift-object `.o` artefacts used by the v5-gamma native AOT pipeline"
keywords = ["relon", "cache", "cranelift", "object", "dlopen"]
categories = ["compilers", "caching"]

[dependencies]
# Error surface follows the workspace `thiserror` policy.
thiserror = { workspace = true }
# bincode for serialising `Metadata` — same crate / version that
# `relon-trace-jit` pulls in, no new resolver branch.
bincode = "1.3"
# Header / metadata derive macros.
serde = { workspace = true, features = ["derive"] }
# sha256 for both the cache-key match and the per-load integrity
# digest. Already a workspace-pinned dep.
sha2 = { workspace = true }
# HMAC-SHA256 over the cache body so a third-party with write access
# to the cache dir cannot inject a payload.
hmac = "0.12"
# Loader: memfd_create + dlopen + dlsym + close().
libc = "0.2"
# Cryptographically-secure source for the per-installation HMAC key.
getrandom = "0.2"
# Lower-case hex encoding of SHA-256 digests for cache file names.
# Workspace-pinned; same crate relon-evaluator / relon-analyzer use.
hex = { workspace = true }

[dev-dependencies]
# Tests build a tiny `.o` with cranelift-object to exercise the
# dlopen / dlsym round-trip end-to-end. Same cranelift channel
# (0.131) the codegen-cranelift crate uses so the workspace ships one
# ISLE backend tree.
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-module = "0.132"
cranelift-object = "0.132"
cranelift-native = "0.132"
target-lexicon = "0.13"
tempfile = "3"
