[package]
name = "relon-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The core parser for the Relon language"
keywords = ["parser", "dsl", "json", "winnow", "config"]
categories = ["parser-implementations", "config"]

[dependencies]
winnow.workspace = true
ordered-float.workspace = true
memchr.workspace = true
miette = { workspace = true }

[dev-dependencies]
rand = "0.8"

