[package]
name = "relon-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The core parser for the Relon language"
keywords = ["parser", "dsl", "json", "rowan", "config"]
categories = ["parser-implementations", "config"]

[dependencies]
ordered-float.workspace = true
miette = { workspace = true }
# Lossless CST — rowan is the rust-analyzer-grade green/red-tree
# library used across the Rust tooling ecosystem (matklad et al.).
rowan = "0.15"

[dev-dependencies]
rand = "0.8"
proptest = { workspace = true }

