[package]
name = "relon-rs-shims"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime ABI shims for Relon AOT-compiled functions linked into Rust binaries"
keywords = ["relon", "aot", "shim", "abi"]
categories = ["compilers"]

# Phase 2 envelope:
# Buffer-protocol entries need (a) a `SandboxState` whose `#[repr(C)]`
# layout matches the LLVM crate's `ArenaState` so the JIT body can read
# `arena_base` / `tail_cursor` / `scratch_cursor` / `scratch_base` at the
# byte offsets it was emitted against, and (b) a marshalling helper
# (`call_buffer_entry`) that packs typed Rust args into the arena and
# decodes the return record. The `relon-eval-api` dep brings the
# canonical `BufferBuilder` / `BufferReader` / `Schema` / `OffsetTable`
# types so the generated binding and the in-process LLVM evaluator
# share one writer/reader implementation.
[dependencies]
relon-eval-api = { workspace = true }
