[package]
name = "relon-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Differential test harness for the Relon backends (tree-walk vs cranelift-AOT)"
keywords = ["relon", "testing", "differential", "evaluator"]
categories = ["development-tools::testing"]
publish = false

[features]
# Off-by-default: pulls the LLVM-AOT backend into the differential so
# `assert_all_backends_bit_equal` compares all three backends. Default
# builds (no LLVM 18 dev headers) keep the fixture as a two-way
# tree-walk vs cranelift compare and record LLVM as skipped.
llvm-aot = ["relon/llvm-aot"]

[dependencies]
# Tree-walk reference evaluator + shared Value / RuntimeError surface.
relon = { workspace = true, features = ["cranelift-aot"] }
relon-eval-api = { workspace = true }
relon-parser = { workspace = true }
relon-analyzer = { workspace = true }
relon-evaluator = { workspace = true }
relon-ir = { workspace = true }

thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
relon-parser = { workspace = true }
# v5-γ tests isolate the on-disk cache to a tempfile-rooted directory
# so concurrent cargo-test threads cannot stomp on each other.
tempfile = "3"
# S1 return-side differential: generate `List<List<scalar>>` arg values
# and assert cranelift == tree-walk bit-for-bit (auto-shrinking).
proptest = { workspace = true }
ordered-float = { workspace = true }
