[package]
name = "relon-trace-abi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared ABI types for the v6-gamma trace JIT pipeline (trace-emitter / trace-jit / codegen-cranelift)."
authors = ["kookyleo <kookyleo@gmail.com>"]

# Source of truth for layout-critical types crossing the cranelift
# emitter / Rust runtime boundary. Deliberately depends on **no other**
# `relon-*` crate so it sits at the bottom of the dep graph:
#
#     relon-trace-abi   <-- (this crate)
#       ^      ^
#       |      +-------- relon-trace-emitter
#       +--------------- relon-trace-jit / codegen-cranelift / host
#
# Adding a relon-* dep here would create a cycle the moment the M1
# phase wires the consumers; reviewers should reject any such PR.
[dependencies]
# `serde` is opt-in: production hot paths never serialize these ABI
# types, but offline tooling (trace dumpers, ABI checkers, snapshot
# tests in the workspace) wants a `Serialize`/`Deserialize` impl. We
# default-off to keep dependents that only need the in-memory layout
# (the emitter, the runtime helpers) free of the serde compile cost.
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
# Only used by the serde roundtrip test; gated behind `cfg(feature =
# "serde")` so the default test build stays serde-free.
bincode = "1.3"
serde = { workspace = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
