[package]
name = "relon-trace-jit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "v6-gamma trace JIT scaffolding: self-contained trace IR, hot counters, deopt protocol, and optimizer passes (pre-integration)."
keywords = ["relon", "trace", "jit", "deopt", "optimizer"]
categories = ["compilers"]

# Apart from the shared `relon-trace-abi` (which has zero inbound deps
# itself, by design), this crate intentionally has no other in-tree
# dependency. It defines a self-contained low-level `TraceOp` IR +
# optimizer + data structures that v6-gamma phase will glue to Relon
# IR / Cranelift via a separate lowering layer. Keeping the dependency
# graph minimal lets us iterate on trace algorithms in isolation and
# unit-test deterministically.
[dependencies]
# Shared ABI types: TraceContext / DeoptStateSnapshot /
# RecoverableWriteRecord / ExternalPc / ExternalSlot / ExternalAddr /
# ObservedType / EffectClass. The `serde` feature is enabled because
# trace-jit serialises `SerializableSideTables` through bincode and the
# ABI types appear inside it.
relon-trace-abi = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
serde_json = { workspace = true }
