[package]
name = "relon-trace-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "v6-gamma trace recorder: lowers Relon IR Op execution history into the trace-jit op stream + observed-type sidetables + guards (pre-integration)."
keywords = ["relon", "trace", "jit", "recorder", "lowering"]
categories = ["compilers"]

# Self-contained recorder wiring `relon-ir` (Op + EffectClass) to
# `relon-trace-jit` (TraceBuffer + TraceOp + ObservedType). No
# dependency on the cranelift backend yet — that glue lives in the
# v6-gamma codegen wiring phase.
[dependencies]
relon-ir = { workspace = true }
relon-trace-jit = { workspace = true }
relon-eval-api = { workspace = true }
ordered-float = { workspace = true }
# P2-15: FxHashMap for hot SsaVar lookups.
rustc-hash = { workspace = true }
# P2-14: ArrayVec for LowerOutcome::Emit guard lists. Cap=4 covers the
# StrConcatN worst case (`MAX_INLINE_STR_CONCAT_N`) so the per-op
# lowering pass stays alloc-free on the hot path.
arrayvec = { workspace = true }
